added removal of duplicates